texi2html/test/invalid/res_info/texi_def_bad_defx_command/def_bad_defx_command.texi
\input texinfo @c -*-texinfo-*-

@setfilename def_bad_defx_command.info

@node Top
@top Test wrong @@def*x

@defun {my def} args @var{arg} @dots{}
@deffnx {type} {name} and now the args

In defun.

@end defun

@bye
